Store user's input to a Dictionary instead of List. Added description parameter to NewEvent action method. Replace ul to table. Modify _Layout.cshtml to display  coding events table when Home tab is clicked, and added  Add tab that will direct user to page that contains a form to fill out and  submit

--- a/CodingEvents/Views/Events/Add.cshtml
+++ b/CodingEvents/Views/Events/Add.cshtml
@@ -1,6 +1,10 @@
 ﻿<h1>Add Event</h1>
 
-<form method="post"> <!--POST-->
-    <input name="name" type="text" />
+<form method="post">
+    <!--POST-->
+    <label for="name">Name</label><br />
+    <input name="name" type="text" /><br />
+    <label for=" description">Description</label><br />
+    <input name="description" type="text" /> <br />
     <input type="submit" value="Add Event" /> <!--method needs to be added to controller using HttpPost in order for form submit to work-->
 </form>
