--- a/CodingEvents/Views/Events/Index.cshtml
+++ b/CodingEvents/Views/Events/Index.cshtml
@@ -10,13 +10,21 @@
 }
 else
 {
-    //loop over the list and display the name of each event
-    <ul>
-        @foreach(string meeting in ViewBag.events)
-                {
-                    <li>@meeting</li>
-                }
-    </ul>            
+
+<table>
+    <tr>
+        <th>Event Name</th>
+        <th>Description</th>
+    </tr>
+    @foreach (KeyValuePair<string, string> meeting in ViewBag.events)
+    {
+        <tr>
+            <td>@meeting.Key</td>
+            <td>@meeting.Value</td>
+        </tr>
+    }
+
+    </table>
 
 }
 
