add event id to class and table view

--- a/CodingEvents/Views/Events/Add.cshtml
+++ b/CodingEvents/Views/Events/Add.cshtml
@@ -1,10 +1,13 @@
 ﻿<h1>Add Event</h1>
 
 <form method="post">
-    <!--POST-->
-    <label for="name">Name</label><br />
-    <input name="name" type="text" /><br />
-    <label for=" description">Description</label><br />
-    <input name="description" type="text" /> <br />
-    <input type="submit" value="Add Event" /> <!--method needs to be added to controller using HttpPost in order for form submit to work-->
+    <div class="form-group">
+        <label for="name">Name</label>
+        <input name="name" type="text" />
+    </div>
+    <div class="form-group">
+        <label for="description">Description</label>
+        <input name="description" />
+    </div>
+    <input type="submit" value="Add Event" />
 </form>
