add delete event action

--- a/CodingEvents/Views/Events/Index.cshtml
+++ b/CodingEvents/Views/Events/Index.cshtml
@@ -4,30 +4,32 @@
     <a asp-controller="Events" asp-action="Add"> Add Event</a>
 </p>
 
+<p>
+    <a asp-controller="Events" asp-action="Delete">Delete Event</a>
+</p>
+
+
 @if (ViewBag.events.Count == 0)
 {
     <p>No events yet!</p>
 }
 else
 {
-
 <table class="table">
     <tr>
-        <th>Event Name</th>
-        <th>ID</th>
+        <th>Id</th>
+        <th>Name</th>
         <th>Description</th>
     </tr>
-    @foreach (var evt in ViewBag.events) 
+
+    @foreach (var evt in ViewBag.events)
     {
         <tr>
             <td>@evt.Id</td>
             <td>@evt.Name</td>
             <td>@evt.Description</td>
-            
         </tr>
     }
-
     </table>
-
 }
 
