--- a/CodingEvents/Views/Events/Add.cshtml
+++ b/CodingEvents/Views/Events/Add.cshtml
@@ -3,11 +3,11 @@
 <form method="post">
     <div class="form-group">
         <label for="name">Name</label>
-        <input name="name" type="text" />
+        <input name="name" type="text" class="form-control"/>
     </div>
     <div class="form-group">
         <label for="description">Description</label>
-        <input name="description" />
+        <input name="description" type="text" class="form-control"/>
     </div>
     <input type="submit" value="Add Event" />
 </form>
