--- a/CodingEvents/Views/Events/Add.cshtml
+++ b/CodingEvents/Views/Events/Add.cshtml
@@ -1,13 +1,27 @@
-﻿<h1>Add Event</h1>
+﻿@using CodingEvents.ViewModels;
+
+<!--pass in instance of model-->
+@model AddEventViewModel;
+
+
+<h1>Add Event</h1>
 
 <form method="post">
-    <div class="form-group">
-        <label for="name">Name</label>
-        <input name="name" type="text" class="form-control"/>
+    <div asp-controller="Events" asp-action="Add" class="form-group">
+        <label asp-for="Name"></label>
+        <input asp-for="Name" type="text" class="form-control" />
+        <!--specify which property’s validation error messages should be displayed if the conditions are not met.-->
+        <span asp-validation-for="Name"></span>
     </div>
     <div class="form-group">
-        <label for="description">Description</label>
-        <input name="description" type="text" class="form-control"/>
+        <label asp-for="Description"></label>
+        <input asp-for="Description" type="text" class="form-control" />
+        <span asp-validation-for="Description"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="ContactEmail">Contact Email</label>
+        <input asp-for="ContactEmail" type="text" class="form-control" />
+        <span asp-validation-for="ContactEmail"></span>
     </div>
     <input type="submit" value="Add Event" />
 </form>
