--- a/CodingEvents/Views/Events/Index.cshtml
+++ b/CodingEvents/Views/Events/Index.cshtml
@@ -28,16 +28,20 @@
                 <th>Name</th>
                 <th>Description</th>
                 <th>Contact Email</th>
+                <th>Location</th>
+                <th>Number of Attendees</th>
             </tr>
             @foreach (var evt in Model)
             {
-                <tr>
-                    <td><a asp-controller="Events" asp-action="Edit" asp-route-id="@evt.Id">Edit Event</a></td>
-                    <td>@evt.Id</td>
-                    <td>@evt.Name</td>
-                    <td>@evt.Description</td>
-                    <td>@evt.ContactEmail</td>
-                </tr>
+        <tr>
+            <td><a asp-controller="Events" asp-action="Edit" asp-route-id="@evt.Id">Edit Event</a></td>
+            <td>@evt.Id</td>
+            <td>@evt.Name</td>
+            <td>@evt.Description</td>
+            <td>@evt.ContactEmail</td>
+            <td>@evt.EventLocation</td>
+            <td>@evt.NumberOfAttendees</td>
+        </tr>
             }
         </table>
     }
