--- a/CodingEvents/Views/Events/Edit.cshtml
+++ b/CodingEvents/Views/Events/Edit.cshtml
@@ -1,14 +1,15 @@
 ﻿<h1>Edit Event</h1>
+<h5>@ViewBag.title</h5>
 
 <form method="post" action="/events/edit">
+    <input type="hidden" value="@ViewBag.eventToEdit.Id" name="eventId" />
     <div class="form-group">
-        <label for="name">@ViewBag.name</label>
-        <input name="name" type="text" class="form-control" />
+        <label for="name">Event Name:</label>
+        <input name="name" type="text" value="@ViewBag.eventToEdit.Name" class="form-control" />
     </div>
     <div class="form-group">
-        <label for="description">@ViewBag.description</label>
-        <input name="description" type="text" class="form-control" />
+        <label for="description">Description:</label>
+        <input name="description" type="text" value="@ViewBag.eventToEdit.Description" class="form-control" />
     </div>
     <input type="submit" value="Edit Event" />
-    <input type="hidden" value="@ViewBag.eventToEdit.Id" name="eventId" />
 </form>
