--- a/CodingEvents/Views/EventCategory/Index.cshtml
+++ b/CodingEvents/Views/EventCategory/Index.cshtml
@@ -5,15 +5,23 @@
 
 <h1>Event Category</h1>
 
-
-<table class="table">
-    <tr>
-        <th>Name</th>
-    </tr>
-    @foreach (EventCategory category in Model)
-    {
+@if (Model.Count == 0)
+{
+    <p>No categories yet!</p>
+    <a asp-controller="EventCategory" asp-action="Create"> Create new event</a>
+}
+else
+{
+    <table class="table">
         <tr>
-            <td>@category.Name</td>
+            <th>Name</th>
         </tr>
-    }
-</table>
+        @foreach (EventCategory category in Model)
+        {
+            <tr>
+                <td>@category.Name</td>
+            </tr>
+        }
+    </table>
+
+}
