--- a/CodingEvents/Views/Shared/_Layout.cshtml
+++ b/CodingEvents/Views/Shared/_Layout.cshtml
@@ -24,6 +24,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="Add">Add events</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="EventCategory" asp-action="Create">Add Category</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="EventCategory" asp-action="Index">Category</a>
+                        </li>
                     </ul>
                 </div>
             </div>
