--- a/CodingEvents/Views/Events/Index.cshtml
+++ b/CodingEvents/Views/Events/Index.cshtml
@@ -42,7 +42,7 @@
                     <td>@evt.ContactEmail</td>
                     <td>@evt.EventLocation</td>
                     <td>@evt.NumberOfAttendees</td>
-                    <td>@evt.Type</td>
+                    <td>@evt.Category.Name</td>
                 </tr>
             }
         </table>
