--- a/CodingEvents/Views/Shared/_Layout.cshtml
+++ b/CodingEvents/Views/Shared/_Layout.cshtml
@@ -19,16 +19,22 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="Index">All Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="Add">Add events</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="Add">Add Events</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="EventCategory" asp-action="Create">Add Category</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="EventCategory" asp-action="Index">Category</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="EventCategory" asp-action="Index">All Categories</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Tag" asp-action="Create">Add Tag</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Tag" asp-action="Index">All Tags</a>
                         </li>
                     </ul>
                 </div>
