Add tags to event detail view

--- a/CodingEvents/Views/Events/Detail.cshtml
+++ b/CodingEvents/Views/Events/Detail.cshtml
@@ -1,5 +1,6 @@
 ﻿@model CodingEvents.ViewModels.EventDetailViewModel
 
+
 <h1>@Model.Name</h1>
 <table class="table">
     <tr>
@@ -14,7 +15,13 @@
         <th>Category</th>
         <td>@Model.CategoryName </td>
     </tr>
+    <tr>
+        <th>Tags</th>
+        <td>@Model.TagText</td>
+    </tr>
 </table>
+
+<a asp-controller="Tag" asp-action="AddEvent" asp-route-id="@Model.EventId">Add Tag</a>
 
 
 
