--- a/CodingEvents/Views/Shared/_Layout.cshtml
+++ b/CodingEvents/Views/Shared/_Layout.cshtml
@@ -36,6 +36,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Tag" asp-action="Index">All Tags</a>
                         </li>
+                        <li class="nav-item">
+                            <partial name="_LoginPartial" />>
+                        </li>
+                        
                     </ul>
                 </div>
             </div>
